# OOP-Lab-7

./: CMakeLists.txt  README.md  battleManager.cpp  battleManager.h  bear.cpp  bear.h  main.cpp  npc.cpp  npc.h  tests.cpp  vihuhol.cpp  vihuhol.h  vip.cpp  vip.h
